MDL-36608 theme_sky_high: Fixes missing background image in admin pages

--- a/theme/sky_high/style/admin.css
+++ b/theme/sky_high/style/admin.css
@@ -1,10 +1,5 @@
 /** Admin layout **/
 
-body.pagelayout-admin {
-    background-image: none;
-    background-color: #fff;
-}
-
 body.pagelayout-admin.has_dock {
     margin-left: 30px;
 }
